Allow setting of device name in web interface

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -161,6 +161,12 @@
           <div>
             <table class="settings">
               <tr>
+                <td style="text-align: right;">Name:</td>
+                <td>&nbsp;
+                  <input id="newDevicename" type="text" placeholder="" maxlength="18" minlength="1">
+                </td>
+              </tr>
+              <tr>
                 <td style="text-align: right;">Door Protocol:</td>
                 <td>&nbsp;
                   <input type="radio" id="gdosec1" name="gdosecuritysetting" value="1">
