Check for WiFi connection after 30 seconds if WiFiPhyMode setting changed

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -192,8 +192,8 @@
               <tr>
                 <td style="text-align: right;">WiFi Version Lock:</td>
                 <td>&nbsp;
-                  <input type="checkbox" id="wifiversionlock" name="wifiversionlock" value="no">
-                  <label for="wifiversionlock">802.11g</label>
+                  <input type="checkbox" id="wifiphymode" name="wifiphymode" value="no">
+                  <label for="wifiphymode">802.11g</label>
                 </td>
               </tr>
               <tr>
