--- a/src/www/index.html
+++ b/src/www/index.html
@@ -190,10 +190,21 @@
                 </td>
               </tr>
               <tr>
-                <td style="text-align: right;">WiFi Version Lock:</td>
+                <td style="text-align: right;">WiFi Version:</td>
+
                 <td>&nbsp;
+                  <input type="radio" id="wifiphymode0" name="wifiphymode" value="0">
+                  <label for="wifiphymode0">Auto</label>
+                  <input type="radio" id="wifiphymode1" name="wifiphymode" value="1">
+                  <label for="wifiphymode1">802.11b</label>
+                  <input type="radio" id="wifiphymode2" name="wifiphymode" value="2">
+                  <label for="wifiphymode2">802.11g</label>
+                  <input type="radio" id="wifiphymode3" name="wifiphymode" value="3">
+                  <label for="wifiphymode3">802.11n</label>
+                  <!--
                   <input type="checkbox" id="wifiphymode" name="wifiphymode" value="no">
                   <label for="wifiphymode">802.11g</label>
+                  -->
                 </td>
               </tr>
               <tr>
@@ -280,7 +291,7 @@
       }
     });
 
-     // Handle mobile device swipe-down to reload...
+    // Handle mobile device swipe-down to reload...
     document.addEventListener('touchstart', function (e) { swipeStart(e); }, false);
     document.addEventListener('touchend', function (e) { swipeEnd(e); }, false);
 
