--- a/src/www/index.html
+++ b/src/www/index.html
@@ -179,19 +179,18 @@
                 <td style="text-align: right;">Require Password:</td>
                 <td>&nbsp;
                   <input type="checkbox" id="pwreq" name="pwreq" value="no">
-                  <span style="font-size: 0.6em;">(default: admin/password)</span>
+                  <span style="font-size: 0.8em;">(default: admin/password)</span>
                 </td>
               </tr>
               <tr>
                 <td style="text-align: right;">Reboot Every:</td>
                 <td>&nbsp;
                   <input type="number" id="reboothours" name="reboothours" value="24" , min="0" , max="72" , step="1">
-                  <label for="reboothours">Hours <span style="font-size: 0.6em;">(never:0, min:1, max:72)</span></label>
+                  Hours <span style="font-size: 0.8em;">(never:0, min:1, max:72)</span>
                 </td>
               </tr>
               <tr>
                 <td style="text-align: right;">WiFi Version:</td>
-
                 <td>&nbsp;
                   <input type="radio" id="wifiphymode0" name="wifiphymode" value="0">
                   <label for="wifiphymode0">Auto</label>
@@ -201,10 +200,6 @@
                   <label for="wifiphymode2">802.11g</label>
                   <input type="radio" id="wifiphymode3" name="wifiphymode" value="3">
                   <label for="wifiphymode3">802.11n</label>
-                  <!--
-                  <input type="checkbox" id="wifiphymode" name="wifiphymode" value="no">
-                  <label for="wifiphymode">802.11g</label>
-                  -->
                 </td>
               </tr>
               <tr>
